--- a/Dual_Function_Builder/App.xaml
+++ b/Dual_Function_Builder/App.xaml
@@ -1,7 +1,7 @@
-﻿<Application x:Class="MLTA_1_2.App"
+﻿<Application x:Class="Dual_Function_Builder.App"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:local="clr-namespace:MLTA_1_2"
+             xmlns:local="clr-namespace:Dual_Function_Builder"
              xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
              StartupUri="MainWindow.xaml">
     <Application.Resources>
